Remove unnecessary attempt to actually parse B2B orders
