# swagger.yml
@@ -44,6 +44,7 @@ components:
         cid:
           type: string
           uniqueItems: true
+          example: 'JS0815DE'
         orderLines:
           $ref: '#/components/schemas/OrderLines'
         orderLinesData:
@@ -51,21 +52,22 @@ components:
     OrderConfirmation:
       required:
         - cid
-        - orderLines
+        - orderNo
+        - paymentDue
       properties:
         cid:
           type: string
           uniqueItems: true
           example: 'JS0815DE'
-        orderLines:
-          $ref: '#/components/schemas/OrderLines'
-        totalQuantity:
-          type: integer
-          example: 4000
+        orderNo:
+          type: string
+          uniqueItems: true
+          example: '3d06ac5e1bdf39d26392f8100f124742'
         paymentDue:
           description: All payments are due 14 days after order placement
           type: string
           format: date
+          example: '2018-01-19T07:02:06.800Z'
     OrderLine:
       description: Order line in default JSON format
       required:
@@ -74,11 +76,11 @@ components:
       properties:
         productId:
           type: integer
-          example: 28
+          example: 8
         quantity:
           type: integer
           minimum: 1
-          example: 1000
+          example: 500
         customerReference:
           type: string
           example: 'PO0000001'
@@ -89,10 +91,7 @@ components:
     OrderLineData:
       description: Order line in customer specific data format
       type: string
-      example:
-        - '{"productId": 28,"quantity": 1000,"customerReference": "PO0000001"}'
-        - '{"productId": 28,"quantity": 1000,"customerReference": ["PO0000001", "JS_20180105"]}'
-        - '{"productId": 28,"quantity": 1000,"customerReference": "PO0000001","couponCode": "pes[Bh.u*t"}'
+      example: '{"productId": 12,"quantity": 10000,"customerReference": ["PO0000001.2", "SM20180105|042"],"couponCode": "pes[Bh.u*t"}'
     OrderLinesData:
       type: array
       items:
